--- a/Html/recupero.html
+++ b/Html/recupero.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../Css/recupero.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
     </style>
 </head>
+
 <body>
-    
-<div class="containerPrincipal">
-    <div class="containerSecundario">
-        <form class="containerForm">
-            <div class="mb-3 text-center">
-              <label for="InputEmail" class="form-label">Email a recuperar:</label>
-              <input type="email" class="form-control inputRecuperar" id="InputEmail" aria-describedby="emailHelp" placeholder="mail@ejemplo.com">
-            </div>
-            <button type="submit" class="btn btn-primary botonRecuperar">Submit</button>
-          </form>
+
+    <div class="containerPrincipal">
+        <div class="containerSecundario">
+            <form class="containerForm">
+                <div class="mb-3 text-center">
+                    <label for="InputEmail" class="form-label">Para recuperar tu contraseña,<br>escribe tu email
+                        aquí<br>y sigue las instrucciones</label>
+                    <input type="email" class="form-control inputRecuperar" id="InputEmail" aria-describedby="emailHelp"
+                        placeholder="mail@ejemplo.com">
+                </div>
+                <button type="submit" class="btn btn-primary botonRecuperar">Submit</button>
+            </form>
+        </div>
     </div>
-</div>
 
-<div class="containerImagen text-center">
-    <div class="subcontainerImagen">
-        <img src="../img/pochoclo confundido.png" alt="" class="img-fluid">
+    <div class="containerImagen text-center">
+        <div class="subcontainerImagen">
+            <img src="../img/pochoclo confundido.png" alt="" class="img-fluid">
+        </div>
     </div>
-</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
