--- a/Html/recupero.html
+++ b/Html/recupero.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../Css/recupero.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -24,7 +25,7 @@
                     <input type="email" class="form-control inputRecuperar" id="InputEmail" aria-describedby="emailHelp"
                         placeholder="mail@ejemplo.com">
                 </div>
-                <button type="submit" class="btn btn-primary botonRecuperar">Submit</button>
+                <button type="button" class="btn btn-primary botonRecuperar" onclick="verificarUsuario()">Submit</button>
             </form>
         </div>
     </div>
@@ -39,6 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="../Js/recupero.js"></script>
 </body>
 
 </html>
