--- a/html/admin.html
+++ b/html/admin.html
@@ -17,22 +17,26 @@
 
 <body>
     <main>
-        <div class="container mt-3 d-flex justify-content-end">
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-primary active" id="btnPeliculas">Películas</button>
-                <button type="button" class="btn btn-primary" id="btnUsuarios">Usuarios</button>
-            </div>
-        </div>
-
-        <section class="m-2 p-2" id="adminPeliculas">
-            <div class="container mt-2 mb-3">
-                <div class="d-md-flex justify-content-between align-items-center">
-                    <h1>Administrar Películas</h1>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#miModal"
-                        onclick="mostrarModal('Nuevo Producto', null)">Nuevo +
-                    </button>
+        <div class="container" id="contenedorTituloBotones">
+            <div class="row">
+                <div class="col-12 col-md-8 d-flex align-items-center">
+                    <h1 class="mb-0">Administrar Películas</h1>
+                </div>
+                <div class="col-12 col-md-4 d-flex justify-content-md-end mt-3 mt-md-0">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary active" id="btnPeliculas">Películas</button>
+                        <button type="button" class="btn btn-primary" id="btnUsuarios">Usuarios</button>
+                    </div>
                 </div>
             </div>
+        </div>
+        
+        
+
+        <section class="m-2 p-2" id="adminPeliculas">
+            <button type="button" class="btn btn-custom" data-toggle="modal" data-target="#miModal"
+                onclick="mostrarModal('Nuevo Producto', null)">Nuevo +
+            </button>
 
             <div class="table-responsive mt-3">
                 <table class="table-light align-middle text-center text-white">
@@ -86,7 +90,8 @@
                                         <option value="Terror">Terror</option>
                                         <option value="Romance">Romance</option>
                                     </select>
-                                    <div class="invalid-feedback">Este campo es obligatorio. Seleccione una categoría.</div>
+                                    <div class="invalid-feedback">Este campo es obligatorio. Seleccione una categoría.
+                                    </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="descripcion" class="form-label">Descripción</label>
@@ -121,7 +126,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary" id="modalBtnAccion"></button>
+                            <button type="button" class="btn btn-custom" id="modalBtnAccion"></button>
                         </div>
                     </div>
                 </div>
@@ -129,11 +134,6 @@
         </section>
 
         <section class="m-2 p-2 hidden" id="adminUsuarios">
-            <div class="container mt-2 mb-2">
-                <div class="d-md-flex justify-content-between align-items-center">
-                    <h1>Administrar Usuarios</h1>
-                </div>
-            </div>
             <div class="table-responsive mt-3">
                 <table class="table-light align-middle text-center text-white">
                     <thead class="text-white-50">
