--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -14,7 +14,7 @@
             <nav class="navbar bg-body-tertiary ">
                 <div class="container-fluid">
                   <form class="d-flex" role="search" id="formBuscador">
-                    <input id="buscador" class="form-control me-2" placeholder="Buscar película..." aria-label="Search">
+                    <input id="buscador" class="form-control me-2" placeholder="Buscar película..." aria-label="Search" required>
                     <button class="btn btn-outline-success" type="submit" id="btnBuscar"><i class="fa-solid fa-magnifying-glass"></i></button>
                   </form>
                 </div>
