--- a/Html/registro.html
+++ b/Html/registro.html
@@ -46,5 +46,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../Js/registro.js" type="module"></script>
+    <script src="../Js/exportRegistro.js"></script>
 </body>
 </html>
