--- a/Error404.html
+++ b/Error404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Error404.css">
+  <link rel="stylesheet" href="Error 404.css">
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
@@ -17,8 +17,9 @@
     <h1>Oops! Página no encontrada</h1>
     
     <div class = "boton">
-        <button> Volver atras </button>
-    </div>
-  </div>
-</body>
-</html>
+              <a href="index.html"><button> Volver a la página principal</button></a>
+          
+            </div>
+          </div>
+        </body>
+        </html>
