--- a/html/detallePelicula.html
+++ b/html/detallePelicula.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,6 +20,11 @@
         <section id="detallePeli">
 
         </section>
+
+        <div id="categoria" class="container-fluid h-50 categoria p-4 color-main">
+
+            
+        </div>
     </main>
 
     <!-- Script JS -->
@@ -28,6 +33,7 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <script src="../js/detallePelicula.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
