--- a/html/detallePelicula.html
+++ b/html/detallePelicula.html
@@ -17,14 +17,15 @@
 
 <body>
     <main>
-        <section id="detallePeli">
+        <section id="detallePeli" class="p-md-0 p-lg-4 d-flex align-items-center justify-content-center">
 
         </section>
-
-        <div id="categoria" class="container-fluid h-50 categoria p-4 color-main">
-
-            
+        <div class="mt-2 p-3">
+            <h2>Recomendaciones</h2>
+            <div id="categoria" class="container-fluid h-50 p-1 ">
+            </div>
         </div>
+
     </main>
 
     <!-- Script JS -->
@@ -33,7 +34,6 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <script src="../js/detallePelicula.js"></script>
-    <script src="../js/index.js"></script>
 </body>
 
 </html>
