--- a/Html/login.html
+++ b/Html/login.html
@@ -75,6 +75,8 @@
     <script src="../Js/login.js" type="module"></script>
     <script src="../Js/exportUsuario.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../Js/exportRegistro.js"></script>
+    <script src="../Js/exportUsuario.js"></script>
 
 </body>
 
