--- a/Html/registro.html
+++ b/Html/registro.html
@@ -51,5 +51,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../Js/registro.js" type="module"></script>
     <script src="../Js/exportRegistro.js"></script>
+    <script src="../Js/exportRegistro.js"></script>
+    
 </body>
 </html>
