--- a/html/admin.html
+++ b/html/admin.html
@@ -149,8 +149,8 @@
                 </table>
             </div>
             <div>
-                <a href="../Html/login.html"></a>
-                <a href="../Html/registro.html"></a>
+                <a href="../Html/login.html">login</a>
+                <a href="../Html/registro.html">registro</a>
             </div>
         </section>
     </main>
@@ -164,6 +164,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/administracion.js"></script>
     <script type="module" src="../js/altaDeUsuario.js"></script>
+    <script src="../Js/exportRegistro.js"></script>
 </body>
 
 </html>
