--- a/html/registro.html
+++ b/html/registro.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
     </style>
-    <title>Document</title>
+    <title>Registro</title>
 </head>
 <body>
 
