--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
   </style>
-  <title>Document</title>
+  <title>Iniciar Sesión</title>
 </head>
 
 <body>
