--- a/html/error404.html
+++ b/html/error404.html
@@ -12,7 +12,7 @@
     <h1>Oops! Página no encontrada</h1>
     
     <div class = "boton">
-        <button> Volver atras </button>
+        <a href="../index.html"><button>Volver</button></a>
     </div>
   </div>
 </body>
