--- a/html/inicio.html
+++ b/html/inicio.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Pochloo</title>
 </head>
 
@@ -86,9 +86,9 @@
                 <div class="footer-col">
                     <h4>Explorar</h4>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="error404.html" target="_blank">Películas</a></li>
-                        <li><a href="error404.html" target="_blank">Series</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="peliculas.html">Películas</a></li>
+                        <li><a href="error404.html">Series</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
