--- a/html/admin.html
+++ b/html/admin.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
               
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Categorías
                 </a>
                 <ul class="dropdown-menu" id="categoriaa"> 
@@ -51,10 +51,10 @@
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link" href="../index.html">Cerrar Sesión</a>
+                <a class="nav-link" id="sesionLink" href="../index.html">Cerrar Sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="admin.html">Administración</a>
+                <a class="nav-link" id="adminLink" href="admin.html">Administración</a>
               </li>
             </ul>
           </div>
