--- a/html/categoria.html
+++ b/html/categoria.html
@@ -44,10 +44,10 @@
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link" href="../index.html">Cerrar Sesión</a>
+                <a class="nav-link" id="sesionLink" href="../index.html">Cerrar Sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="admin.html">Administración</a>
+                <a class="nav-link" id="adminLink" href="admin.html">Administración</a>
               </li>
             </ul>
           </div>
@@ -116,5 +116,6 @@
     <script src="../js/exportPeliculas.js"></script>
     <script src="../js/buscador.js"></script>
     <script src="../js/categoria.js"></script>
+    <script src="../js/header.js"></script>
 </body>
 </html>
