--- a/html/detallePelicula.html
+++ b/html/detallePelicula.html
@@ -51,10 +51,10 @@
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link" href="../index.html">Cerrar Sesión</a>
+                <a class="nav-link" id="sesionLink" href="../index.html">Cerrar Sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="admin.html">Administración</a>
+                <a class="nav-link" id="adminLink" href="admin.html">Administración</a>
               </li>
             </ul>
           </div>
@@ -125,6 +125,9 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <script src="../js/detallePelicula.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/buscador.js"></script>
+    <script src="../js/categoria.js"></script>
 </body>
 
 </html>
