--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -93,7 +93,7 @@
                 <div class="input-box">
                     <textarea placeholder="Escribe tu mensaje..."></textarea>
                 </div>
-                <button type="submit">Enviar mensaje</button>
+                <button type="submit"class="btn btn-primary" onclick="enviarMail()">Enviar mensaje</button>
             </form>
         </div>
     </main>
