--- a/html/admin.html
+++ b/html/admin.html
@@ -60,6 +60,7 @@
           </div>
         </div>
       </nav>
+      <script src="../js/header.js"></script>
     <main class="p-4">
         <div class="container" id="contenedorTituloBotones">
             <div class="row">
