--- a/html/recupero.html
+++ b/html/recupero.html
@@ -36,6 +36,9 @@
             <img src="../img/pochoclo confundido.png" alt="" class="img-fluid">
         </div>
     </div>
+    <div class = "boton">
+        <a href="inicio.html"><button>Volver</button></a>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
